# systemd2mqtt

./: .envrc  Cargo.toml  README.adoc  ci.nix  derivation.nix  flake.nix  lock.nix  nixos.nix  overlay.nix
.github/workflows/: systemd2mqtt.yml
core/: Cargo.toml
core/src/: lib.rs  mqtt.rs
discovery/: Cargo.toml
discovery/src/: lib.rs  macros.rs
discovery/src/entities/: diag.rs  mod.rs  unit.rs
payload/: Cargo.toml
payload/src/: lib.rs  payload.rs
src/: cli.rs  core.rs  lib.rs  macros.rs  main.rs  payload.rs
src/core/: mod.rs  mqtt.rs
src/entities/: diag.rs  mod.rs  unit.rs
