[package]
name = "systemd2mqtt"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2018"

description = "expose systemd services to mqtt"
keywords = ["systemd", "mqtt"]

homepage = "https://github.com/arcnmx/systemd2mqtt"
repository = "https://github.com/arcnmx/systemd2mqtt"
readme = "README.adoc"
license = "MIT"

[dependencies]
systemd2mqtt-core = { version = "0.1", path = "./core" }
systemd2mqtt-payload = { version = "0.1", path = "./payload" }
tokio = { version = "1", default-features = false, features = ["process", "rt-multi-thread", "time", "macros"] }
clap = { version = "4", features = ["derive", "env"] }
ctrlc = { version = "3", features = ["termination"] }
async-ctrlc = { version = "1", features = ["stream"] }
futures = { version = "0.3", features = ["thread-pool"] }
error-stack = "0.2"
sd-notify = "0.4"
env_logger = "0.10"
log = "0.4"
url = "2"

[features]
default = ["paho"]
paho = ["systemd2mqtt-core/paho"]
tls = ["systemd2mqtt-core/tls"]

[workspace]
members = ["payload", "discovery", "core"]
