[package]
name = "systemd2mqtt-core"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2018"

[dependencies]
systemd2mqtt-payload = { version = "0.1", path = "../payload" }
systemd2mqtt-discovery = { version = "0.1", path = "../discovery" }
thiserror = "1"
error-stack = "0.2"
futures = { version = "0.3", features = ["thread-pool"] }
log = "0.4"
serde_json = "1"
serde_urlencoded = "0.7"
url = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
zbus_systemd = { version = "0.0.8", features = ["systemd1", "hostname1"] }
hass-mqtt-types = { version = "0", git = "https://github.com/YoloDev/hass-rs" }
hass-mqtt-client = { version = "0", default-features = false, git = "https://github.com/YoloDev/hass-rs" }

[features]
default = []
paho = ["hass-mqtt-client/paho"]
tls = ["hass-mqtt-client/tls"]
