[package]
name = "systemd2mqtt-payload"
version = "0.1.0"
authors = ["arcnmx"]
edition = "2018"

[dependencies]
thiserror = "1"
error-stack = "0.2"
serde_json = "1"
serde_urlencoded = "0.7"
url = "2"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
hass-mqtt-types = { version = "0.2", git = "https://github.com/arcnmx/hass-rs", branch = "client" }
